[package]
name = "tauri-android-camera-plugin"
version = "0.1.0"
edition = "2021"
description = "Tauri 2 Android Camera Plugin - 完整的相机功能插件"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/tauri-android-camera-plugin"
keywords = ["tauri", "android", "camera", "plugin"]
categories = ["api-bindings"]

[lib]
name = "tauri_android_camera_plugin"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"

[dev-dependencies]
tauri = { version = "2", features = [] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"] 